# napari-microscope

./: .gitignore  NEWS  README  pyproject.toml  setup.py
napari_microscope/: __init__.py
