[build-system]
requires = ['setuptools']


[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
# Despite the profile option being set to "black", there's still some
# options that are not correcly set in a compatible manner.  The
# following are for compatibility with black style.
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3  # multi lineoutput 3 is vert-hanging

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']


[tool.pylint.FORMAT]
max-line-length = 79
